[package]
name = "learn-os"
version = "0.1.0"
edition = "2021"


[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pc-keyboard = "0.7.0"
pic8259 = "0.10.4"
spin = "0.9.8"
volatile = "0.2.7"
x86_64 = "0.14.11"
